--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,34 @@
 $accent_color: #b88b58;
+$bl: #000;
+$wh: #fff;
+$small_h: #aeaeae;
+
+@mixin header_styles {		
+	text-align: center;
+	font-size: 30px;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+@mixin small_header {
+	text-align: center;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+	line-height: 30px;
+	margin-bottom: 45px;
+	color: $small_h;
+
+}
+
+/** {
+	border: 1px solid #bbb;
+}*/
 
 body {
 	padding: 0;
 	margin: 0;
+	backround-color: #wh;
 }
 
 .container-fluid {
@@ -11,6 +37,8 @@ body {
 	padding: 0;
 	margin: 0;
 }
+
+//Header styles
 
 header {
 	padding: 0;
@@ -28,12 +56,12 @@ header {
 	nav {
 		height: 100px;
 		width: 100%;
-		background-color: #000;
+		background-color: $bl;
 		padding: 0;
 		margin: 0;
 	}
 
-	img {
+	.logo {
 		display: inline;
 		margin: 25px 25px 25px 200px;
 	}
@@ -50,7 +78,7 @@ header {
 
 	li {
 		display: inline-block;
-		color: #fff;
+		color: $wh;
 		line-height: 93px;
 		font-size: 14px;
 		font-weight: 700;
@@ -70,7 +98,7 @@ header {
 		h1 {
 			text-align: center;
 			text-transform: uppercase;
-			color: #fff;
+			color: $wh;
 			font-size: 72px;
 			font-weight: 700;
 			line-height: 69px;
@@ -80,7 +108,7 @@ header {
 			padding: 29px 0 30px 0;
 			text-align: center;
 			height: 18px;
-			color: #ffffff;
+			color: $wh;
 			font-size: 24px;
 			font-weight: 400;
 			line-height: 18px;
@@ -92,7 +120,7 @@ header {
 			width: 194px;
 			height: 45px;
 			background-color: $accent_color;
-			color: #fff;
+			color: $wh;
 			font-size: 14px;
 			text-transform: uppercase;
 			font-weight: 700;
@@ -101,10 +129,99 @@ header {
 			border: none;
 		}
 
-		img {
+		.dots {
 			margin: 120px 620px 15px 620px;
 		}
 
 	}
 
+}
+
+//About us section
+
+.about {
+	padding: 55px;
+	position: relative;
+
+		img.phone {
+			position: absolute;
+			top: -35px;
+			right: 80px;
+			background-color: $accent_color;
+			padding: 15px;
+			border-radius: 50%;
+		}
+
+		h2 {
+			@include header_styles;
+		}
+
+		h3 {
+			@include small_header;
+			color: $small_h;
+		}
+
+		.container {
+			padding: 0 0 50px 0;
+
+			p {
+				margin-top: 8px;
+				font-size: 14px;
+				line-height: 25px;
+				color: #242424;
+				font-weight: 500;
+			}
+
+			button {
+				margin-top: 15px;
+				background-color: $accent_color;
+				width: 194px;
+				height: 45px;
+				color: $wh;
+				font-size: 14px;
+				border-radius: 25px;
+				text-transform: uppercase;
+				border: none;
+			}
+
+			img {
+				width: 445px;
+				height: 275px;
+			}
+		}
+}
+
+//Services section
+
+.services {
+	padding: 55px;
+	height: 416px;
+	width: 100%;
+	background-color: $bl;
+
+	h2 {
+		@include header_styles;
+		color: $wh;
+	}
+
+	h3 {
+		@include small_header;
+		margin-bottom: 55px;
+	}
+
+	.icon {
+		text-align: center;
+
+		h4 {
+			color: $wh;
+			text-transform: uppercase;
+			font-size: 18px;
+			margin-top: 20px;
+		}
+
+		p {
+			color: #7e7e7e;
+			font-size: 12px;
+		}
+	}
 }
