--- a/css/style.css
+++ b/css/style.css
@@ -97,21 +97,23 @@ header {
 }
 
 .hero .slogan button {
-  margin: 20px 560px;
-  width: 194px;
-  height: 45px;
-  background-color: #b88b58;
+  margin: 67px auto 0 auto;
+  display: block;
+  margin: 0 auto;
   color: #fff;
-  font-size: 14px;
+  background-color: #b88b58;
+  font-size: 12px;
   text-transform: uppercase;
   font-weight: 700;
-  border-radius: 25px;
-  line-height: 18px;
+  width: 194px;
+  height: 45px;
   border: none;
+  border-radius: 25px;
 }
 
-.hero .dots img {
-  margin: 100px 45% 42px 45%;
+.hero .dots {
+  display: block;
+  margin: 125px auto 43px auto;
 }
 
 .about {
@@ -160,14 +162,17 @@ header {
 
 .about .container button {
   margin-top: 15px;
+  display: block;
+  margin: 0 auto;
+  color: #fff;
   background-color: #b88b58;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
   width: 194px;
   height: 45px;
-  color: #fff;
-  font-size: 14px;
-  border-radius: 25px;
-  text-transform: uppercase;
   border: none;
+  border-radius: 25px;
 }
 
 .about .container img {
@@ -325,16 +330,18 @@ header {
 }
 
 .projects button {
-  margin: 30px 43%;
-  padding: 10px 45px;
-  background-color: #b88b58;
-  border: none;
-  width: 194px;
-  border-radius: 25px;
+  margin: 30px auto;
+  display: block;
+  margin: 0 auto;
   color: #fff;
-  text-transform: uppercase;
+  background-color: #b88b58;
   font-size: 12px;
+  text-transform: uppercase;
   font-weight: 700;
+  width: 194px;
+  height: 45px;
+  border: none;
+  border-radius: 25px;
 }
 
 .team {
@@ -414,7 +421,7 @@ header {
 
 .team .dots {
   display: block;
-  margin: 0 auto;
+  margin: 53px auto 43px auto;
 }
 
 .clients {
@@ -478,7 +485,8 @@ header {
 }
 
 .clients .dots {
-  margin: 0 auto;
+  display: block;
+  margin: 51px auto 41px auto;
 }
 
 .clients .logos {
@@ -574,6 +582,209 @@ header {
 
 .prices .offers .offer button:hover {
   background-color: #b88b58;
+}
+
+.premium {
+  width: 100%;
+  height: 757px;
+  background-color: #fff;
+  padding: 55px;
+}
+
+.premium h2 {
+  text-align: center;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.premium h3 {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 30px;
+  color: #aeaeae;
+}
+
+.premium .features {
+  margin: 36px auto 27px auto;
+}
+
+.premium .features h4 {
+  font-size: 21px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #242424;
+  display: inline;
+  margin-left: 30px;
+}
+
+.premium .features p {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 25px;
+  margin-left: 68px;
+  margin-bottom: 32px;
+}
+
+.premium .features p:first-of-type {
+  margin-bottom: 42px;
+}
+
+.premium .dots {
+  display: block;
+  margin: 0 auto;
+}
+
+.premium button {
+  display: block;
+  margin: 0 auto;
+  color: #fff;
+  background-color: #b88b58;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 194px;
+  height: 45px;
+  border: none;
+  border-radius: 25px;
+  margin: 40px auto 43px auto;
+}
+
+.facts {
+  padding-top: 55px;
+  background-color: #000;
+  height: 492px;
+  text-align: center;
+}
+
+.facts h2 {
+  text-align: center;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.facts h3 {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 30px;
+  color: #aeaeae;
+  margin-bottom: 0;
+}
+
+.facts .details {
+  height: 230px;
+  margin-top: 51px;
+}
+
+.facts .details .detail {
+  position: relative;
+  height: 154px;
+  margin: 30px auto 0 auto;
+}
+
+.facts .details .detail h4 {
+  font-size: 48px;
+  font-weight: 700;
+  color: #b88b58;
+  line-height: 28px;
+}
+
+.facts .details .detail h5 {
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 22px;
+}
+
+.facts .details .detail p {
+  position: absolute;
+  font-size: 12px;
+  color: #7e7e7e;
+  line-height: 21px;
+  font-weight: 300;
+  margin: 0;
+  top: 110px;
+  bottom: 0;
+}
+
+.facts .socials {
+  height: 82px;
+  padding: 21px;
+  font-size: 10px;
+  font-weight: 700;
+  background-color: #fff;
+  color: #aeaeae;
+}
+
+.facts .socials img {
+  display: inline;
+  margin-right: 15px;
+}
+
+.facts .socials p {
+  display: inline;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-right: 63px;
+}
+
+.facts .socials i {
+  width: 33px;
+  height: 33px;
+  border-radius: 50%;
+  color: #fff;
+  margin: 0 5px 0 36px;
+  padding: 8px;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.facts .socials i.fa-twitter {
+  background-color: #34c5f0;
+}
+
+.facts .socials i.fa-linkedin-in {
+  background-color: #127cb4;
+}
+
+.facts .socials i.fa-facebook-f {
+  background-color: #336297;
+}
+
+.facts .socials i.fa-google-plus-g {
+  background-color: #e74237;
+}
+
+.facts .socials i.fa-pinterest-p {
+  background-color: #b71c29;
+}
+
+.contact {
+  padding-top: 55px;
+  background-color: #f7f7f7;
+  height: 625px;
+}
+
+.contact h2 {
+  text-align: center;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.contact h3 {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 30px;
+  color: #aeaeae;
 }
 
 /*# sourceMappingURL=style.css.map */
